# librespot-swift

./: .gitignore  Librespot.podspec
example/LibrespotSwiftExample/: ContentView.swift  LibrespotShared.swift  LibrespotSwiftExampleApp.swift
example/LibrespotSwiftExample.xcodeproj/: project.pbxproj
example/LibrespotSwiftExample.xcodeproj/xcshareddata/xcschemes/: LibrespotSwiftExample.xcscheme
rust/: Cargo.toml  Makefile  build.sh  rust-toolchain.toml
rust/include/: librespot_swift_gen.h
rust/respot_swift_gen.xcodeproj/: project.pbxproj
rust/src/: lib.rs
src/: Librespot.swift  LibrespotAuth.swift  LibrespotAuthOptions.swift  LibrespotError+Error.swift  LibrespotLoginOptions.swift  LibrespotPlayerEvents.swift  LibrespotSession.swift  LibrespotUtils.swift
src/ui/: LibrespotAuthViewController.swift  LibrespotProgressView.swift  LibrespotWebViewController.swift
src/ui/ios/: LibrespotIOSAuthViewController.swift  LibrespotIOSProgressView.swift  LibrespotIOSWebViewController.swift
xcode/: librespot_rust.sh
xcode/LibrespotSwift/: LibrespotSwift.h
xcode/LibrespotSwift.xcodeproj/: project.pbxproj
xcode/LibrespotSwift.xcodeproj/xcshareddata/xcschemes/: LibrespotSwift.xcscheme
xcode/LibrespotSwift/LibrespotSwift.docc/: LibrespotSwift.md
