[package]
name = "respot_swift_gen"
version = "0.1.0"
authors = ["Luis Finke <luisfinke@gmail.com>"]
edition = "2021"

build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = { version = "0.1", features = ["async"] }
librespot = { git = "https://github.com/librespot-org/librespot.git", rev = "11c3df8eb1ab2c6a8f31a02cb8833caf825f415b" }
env_logger = "0.10.0"
log = "0.4.17"
serde = "1.0.214"
